@@ -49,19 +49,35 @@ public class ComponentServiceTest {
 
     @Test
     public void createNewOK() {
-        var boostComponentId = componentService.create(
-                NewComponentDTO
-                        .builder()
-                        .name("boost libraries")
-                        .description("boost libraries for c++ applications")
-                        .organization("boost")
-                        .url("https://www.boost.org/")
-                        .approvalRule("rule1")
-                        .testingCriteria("criteria1")
-                        .approvalIdentity(Set.of("user1@slac.stanford.edu"))
-                        .build()
+        var boostComponentId = assertDoesNotThrow(
+                () -> componentService.create(
+                        NewComponentDTO
+                                .builder()
+                                .name("boost libraries")
+                                .description("boost libraries for c++ applications")
+                                .organization("boost")
+                                .url("https://www.boost.org/")
+                                .approvalRule("rule1")
+                                .testingCriteria("criteria1")
+                                .approvalIdentity(Set.of("user1@slac.stanford.edu"))
+                                .build()
+                )
         );
         assertThat(boostComponentId).isNotNull();
+
+        var fullComponentFound = assertDoesNotThrow(
+                () -> componentService.findById(boostComponentId)
+        );
+        assertThat(fullComponentFound).isNotNull();
+        assertThat(fullComponentFound.name()).isEqualTo("boost-libraries");
+        assertThat(fullComponentFound.description()).isEqualTo("boost libraries for c++ applications");
+        assertThat(fullComponentFound.organization()).isEqualTo("boost");
+        assertThat(fullComponentFound.url()).isEqualTo("https://www.boost.org/");
+        assertThat(fullComponentFound.approvalRule()).isEqualTo("rule1");
+        assertThat(fullComponentFound.testingCriteria()).isEqualTo("criteria1");
+        assertThat(fullComponentFound.approvalIdentity()).isNotNull();
+        assertThat(fullComponentFound.approvalIdentity().size()).isEqualTo(1);
+        assertThat(fullComponentFound.componentToken()).isNotEmpty();
     }
 
     @Test
@@ -357,7 +373,7 @@ public class ComponentServiceTest {
     }
 
     @Test
-    public void createBranchOnVersionOK() {
+    public void createBranchOK() {
         var boostComponentId = assertDoesNotThrow(
                 () -> componentService.create(
                         NewComponentDTO
@@ -373,23 +389,11 @@ public class ComponentServiceTest {
                 )
         );
         assertThat(boostComponentId).isNotNull();
-        var versionAddResult = assertDoesNotThrow(
-                () -> componentService.addNewVersion(
-                        "boost-libraries",
-                        NewVersionDTO
-                                .builder()
-                                .label("1_83_0")
-                                .build()
-                )
-        );
-        assertThat(versionAddResult).isNotNull();
-        assertThat(versionAddResult).isTrue();
 
 
         var branchAddResult = assertDoesNotThrow(
                 () -> componentService.addNewBranch(
                         "boost-libraries",
-                        "1_83_0",
                         BranchDTO
                                 .builder()
                                 .type("feature")
@@ -407,11 +411,60 @@ public class ComponentServiceTest {
         );
         assertThat(boostComponent).isNotNull();
         assertThat(boostComponent.name()).isEqualTo("boost-libraries");
-        assertThat(boostComponent.versions()).isNotNull();
-        assertThat(boostComponent.versions().size()).isEqualTo(1);
-        assertThat(boostComponent.versions().get(0).label()).isEqualTo("1_83_0");
-        assertThat(boostComponent.versions().get(0).branches().getFirst().branchName()).isEqualTo("add-new-channel");
-        assertThat(boostComponent.versions().get(0).branches().getFirst().branchPoint()).isEqualTo("main");
-        assertThat(boostComponent.versions().get(0).branches().getFirst().type()).isEqualTo("feature");
+        assertThat(boostComponent.branches()).isNotNull();
+        assertThat(boostComponent.branches().size()).isEqualTo(1);
+        assertThat(boostComponent.branches().getFirst().branchName()).isEqualTo("add-new-channel");
+        assertThat(boostComponent.branches().getFirst().branchPoint()).isEqualTo("main");
+        assertThat(boostComponent.branches().getFirst().type()).isEqualTo("feature");
+    }
+
+    @Test
+    public void createBrancFailWithSameBranch() {
+        var boostComponentId = assertDoesNotThrow(
+                () -> componentService.create(
+                        NewComponentDTO
+                                .builder()
+                                .name("boost libraries")
+                                .description("boost libraries for c++ applications")
+                                .organization("boost")
+                                .url("https://www.boost.org/")
+                                .approvalRule("rule1")
+                                .testingCriteria("criteria1")
+                                .approvalIdentity(Set.of("user1@slac.stanford.edu"))
+                                .build()
+                )
+        );
+        assertThat(boostComponentId).isNotNull();
+
+
+        var branchAddResult = assertDoesNotThrow(
+                () -> componentService.addNewBranch(
+                        "boost-libraries",
+                        BranchDTO
+                                .builder()
+                                .type("feature")
+                                .branchName("add-new-channel")
+                                .branchPoint("main")
+                                .build()
+                )
+        );
+        assertThat(branchAddResult).isNotNull();
+        assertThat(branchAddResult).isTrue();
+
+        ControllerLogicException branchAlreadyExists = assertThrows(
+                ControllerLogicException.class,
+                () -> componentService.addNewBranch(
+                        "boost-libraries",
+                        BranchDTO
+                                .builder()
+                                .type("feature")
+                                .branchName("add-new-channel")
+                                .branchPoint("main")
+                                .build()
+                )
+        );
+
+        assertThat(branchAlreadyExists).isNotNull();
+        assertThat(branchAlreadyExists.getErrorCode()).isEqualTo(-2);
     }
 }
